--- a/cdk/process-email-lambda/package.json
+++ b/cdk/process-email-lambda/package.json
@@ -13,11 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "aws-lambda": "^1.0.7",
-    "aws-xray-sdk-core": "^3.3.5"
+    "aws-xray-sdk-core": "^3.3.5",
+    "mailparser": "^3.5.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.97",
     "@types/jest": "^27.5.0",
+    "@types/mailparser": "^3.4.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
     "aws-sdk": "^2.1145.0",
