--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,15 +14,16 @@
     "@types/jest": "^27.5.0",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.25.0",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "aws-cdk": "2.25.0",
     "ts-node": "^10.7.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
     "aws-cdk-lib": "2.25.0",
     "constructs": "^10.0.0",
+    "rust.aws-cdk-lambda": "^1.1.3",
     "source-map-support": "^0.5.21"
   }
 }
