--- a/cdk/enimerosi-ts-lib/jestconfig.json
+++ b/cdk/enimerosi-ts-lib/jestconfig.json
@@ -2,7 +2,7 @@
     "transform": {
         "^.+\\.(t|j)sx?$": "ts-jest"
     },
-    "testRegex": "(/tests/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "testRegex": "enimerosi-ts-lib/tests/.*",
     "moduleFileExtensions": [
         "ts",
         "tsx",
