--- a/cdk/enimerosi-ts-lib/package.json
+++ b/cdk/enimerosi-ts-lib/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^27.5.1",
+    "@types/sanitize-html": "^2.6.2",
     "jest": "^28.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^28.0.3",
@@ -32,6 +33,7 @@
   "dependencies": {
     "@types/mailparser": "^3.4.0",
     "mailparser": "^3.5.0",
-    "node-html-parser": "^5.3.3"
+    "node-html-parser": "^5.3.3",
+    "sanitize-html": "^2.7.0"
   }
 }
