--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "aws-cdk-lib": "^2.25.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
+  },
+  "volta": {
+    "node": "18.3.0"
   }
 }
