--- a/process-email-lambda/package.json
+++ b/process-email-lambda/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-appsync": "^3.105.0",
     "aws-lambda": "^1.0.7",
     "aws-xray-sdk-core": "^3.3.5",
     "enimerosi-ts-lib": "file:../enimerosi-ts-lib",
