--- a/get-notifications-lambda/codegen.yaml
+++ b/get-notifications-lambda/codegen.yaml
@@ -1,8 +1,7 @@
 overwrite: true
-schema:
-  - ../graphql/enimerosi.graphql
-
+schema: "../graphql/enimerosi.graphql"
+documents: null
 generates:
-  appsync.d.ts:
+  src/generated/graphql.ts:
     plugins:
-      - typescript
+      - "typescript"
