--- a/get-notifications-lambda/package.json
+++ b/get-notifications-lambda/package.json
@@ -7,21 +7,26 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "gengraphql": "graphql-codegen --config codegen.yaml"
   },
   "author": "Nicholas Matsakis",
   "license": "MIT",
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typescript": "^2.5.0",
+    "@graphql-codegen/cli": "2.12.0",
+    "@graphql-codegen/typescript": "2.7.3",
     "@types/aws-lambda": "^8.10.99",
     "ts-jest": "^28.0.4",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "jest": "^28.1.0",
+    "@graphql-codegen/typescript-resolvers": "2.7.3",
+    "@graphql-codegen/introspection": "2.2.1"
   },
   "dependencies": {
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1150.0",
     "enimerosi-ts-lib": "file:../enimerosi-ts-lib",
-    "range-seq": "^1.0.0"
+    "range-seq": "^1.0.0",
+    "mailparser": "^3.5.0"
   }
 }
