--- a/get-notifications-lambda/tsconfig.json
+++ b/get-notifications-lambda/tsconfig.json
@@ -10,7 +10,7 @@
         "forceConsistentCasingInFileNames": true,
         "isolatedModules": true,
         "declaration": true, /* Concatenate & emit output to single file.*/
-        "outDir": "lib",
+        "outDir": "src",
         "strictNullChecks": true,
     },
     "include": [
